--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -6,22 +6,25 @@
     align-items: center;
     background-color:#E1BE00;
     color: white;
+    
     height: 50px;
     padding: 15px 30px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   }
   
   #websitename {
-    font-size: 28px;
-    margin: 0;
+    font-size: 40px;
+    margin-left: 11px;
     letter-spacing: 1px;
   }
   
   a {
     color: white;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: 600;
     text-decoration: none;
     margin-left: 25px;
-    font-size: 20px;
+    font-size: 25px;
     transition: all 0.3s ease;
   }
   
