used fetch API to send user data to firebase Database

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -32,6 +32,6 @@
     
   } */
   .navbar a.active{
-    transform: translateY(-2px);
+    /* transform: translateY(-2px); */
     text-decoration: underline;
   }
