--- a/src/Components/ProductsCard/ProductCard.css
+++ b/src/Components/ProductsCard/ProductCard.css
@@ -7,7 +7,7 @@
     margin: 10px;
     text-align: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    background-color: beige;
+    background-color: #fcf8ac;
     padding-bottom: 60px;
 
 }
