--- a/src/Components/Navbar/Container.css
+++ b/src/Components/Navbar/Container.css
@@ -5,7 +5,7 @@
     display: flex;
     /* margin:4px; */
     /* border: 2px solid black; */
-    background-color: white;
+    background-color:#fcf8ac;
     justify-content: center;
     color:#4F3A30;
 }
