--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -35,3 +35,22 @@
     /* transform: translateY(-2px); */
     text-decoration: underline;
   }
+
+  .sign-up-cart-button-container {
+    display: flex;
+    align-items: center; /* Align buttons vertically in the container */
+  }
+  
+  .sign-up-button {
+    background-color: rgb(99, 102, 62);
+    color: white;
+    border: none;
+    border-radius: 6px;
+    padding: 8px 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-right: 5px; /* Adjusted margin */
+    margin-top: 15px;
+    height: 35px;
+  }
+  
